@@ -1,7 +1,6 @@
-
 package com.LinkVerse.post.service;
 
-import com.LinkVerse.post.FileUtil;
+
 import com.LinkVerse.post.Mapper.PostMapper;
 import com.LinkVerse.post.Mapper.ShareMapper;
 import com.LinkVerse.post.dto.ApiResponse;
@@ -9,16 +8,14 @@ import com.LinkVerse.post.dto.PageResponse;
 import com.LinkVerse.post.dto.request.PostRequest;
 import com.LinkVerse.post.dto.response.PostResponse;
 import com.LinkVerse.post.entity.*;
+import com.LinkVerse.post.repository.PostHistoryRepository;
 import com.LinkVerse.post.repository.PostRepository;
-import com.LinkVerse.post.repository.PostSearchRepository;
 import com.LinkVerse.post.repository.SharedPostRepository;
-import com.LinkVerse.post.repository.client.ProfileServiceClient;
-import feign.FeignException;
+import com.amazonaws.SdkClientException;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.EnumUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -29,184 +26,171 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
-
-import java.beans.Visibility;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
 @Service
 @RequiredArgsConstructor
-@Slf4j(topic = "PRODUCT-SERVICE")
+@Slf4j
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class PostService {
     PostRepository postRepository;
     PostMapper postMapper;
     SharedPostRepository sharedPostRepository;
     ShareMapper shareMapper;
-    ProfileServiceClient profileServiceClient;
-    PostSearchRepository postSearchRepository;
-
-
+    PostHistoryRepository postHistoryRepository;
+    @Autowired
+    KeywordService keywordService;
 
     KafkaTemplate<String, Object> kafkaTemplate;
     @Autowired
     S3Service s3Service;
+    @Autowired
+    ContentModerationService contentModerationService;
+    @Autowired
+    TranslationService translationService;
 
-    public ApiResponse<PostResponse> postImageAvatar(PostRequest request, MultipartFile avatarFile) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
-        if (!FileUtil.isImageFile(avatarFile)) {
-            return ApiResponse.<PostResponse>builder()
-                    .code(HttpStatus.BAD_REQUEST.value())
-                    .message("Only image files are allowed.")
-                    .build();
-        }
-
-        // Upload file lên S3 và lấy avatar URL
-        String avatarUrl = s3Service.uploadFile(avatarFile);
-
-        PostVisibility visibility = request.getVisibility();
-        if (visibility == null) {
-            visibility = PostVisibility.PUBLIC; // Gán giá trị mặc định
-        }
-
-        // Nếu visibility không hợp lệ, trả về lỗi
-        if (!EnumUtils.isValidEnum(PostVisibility.class, visibility.name())) {
-            return ApiResponse.<PostResponse>builder()
-                    .code(400)
-                    .message("Invalid visibility value")
-                    .build();
-        }
-
-        // Tạo đối tượng Post mới
-        Post post = Post.builder()
-                .content(request.getContent())
-                .userId(authentication.getName())
-                .fileUrl(avatarUrl)
-                .visibility(request.getVisibility())
-                .createdDate(Instant.now())
-                .modifiedDate(Instant.now())
-                .like(0)
-                .unlike(0)
-                .comments(List.of())
-                .build();
-
-        post = postRepository.save(post);
-
-        // Lưu vào Elasticsearch
-        if (post.getId() != null) {
-            PostDocument postDocument = PostDocument.builder()
-                    .id(post.getId())
-                    .content(post.getContent())
-                    .userId(post.getUserId())
-                    .fileUrls(post.getFileUrls())
-                    .visibility(post.getVisibility())
-                    .createdAt(post.getCreatedDate())
-                    .updatedAt(post.getModifiedDate())
-                    .comments(new ArrayList<>())
-                    .build();
-            postSearchRepository.save(postDocument);
-            log.info("Save postDocument", postDocument);
-        }
-
-        // Cập nhật avatar của người dùng
-        try {
-            profileServiceClient.updateImage(authentication.getName(), avatarUrl);
-        } catch (FeignException e) {
-            return ApiResponse.<PostResponse>builder()
-                    .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                    .message("Failed to update avatar in profile-service: " + e.getMessage())
-                    .build();
-        }
-
-        // Trả về thông tin post mới cùng với response
-        return ApiResponse.<PostResponse>builder()
-                .code(200)
-                .message("Avatar post created successfully and profile updated")
-                .result(postMapper.toPostResponse(post))
-                .build();
-    }
-
+    SentimentAnalysisService sentimentAnalysisService;
 
     public ApiResponse<PostResponse> createPostWithFiles(PostRequest request, List<MultipartFile> files) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
-
-        List<String> fileUrls = (files != null && files.stream().anyMatch(file -> !file.isEmpty()))
-                ? s3Service.uploadFiles(files.stream().filter(file -> !file.isEmpty()).collect(Collectors.toList()))
-                : List.of();
-
-        PostVisibility visibility = request.getVisibility();
-        if (visibility == null) {
-            visibility = PostVisibility.PUBLIC; // Set default value
-        }
-
-        if (!EnumUtils.isValidEnum(PostVisibility.class, visibility.name())) {
+        // Check if the content is appropriate
+        if (!contentModerationService.isContentAppropriate(request.getContent())) {
             return ApiResponse.<PostResponse>builder()
-                    .code(400)
-                    .message("Invalid visibility value")
+                    .code(HttpStatus.BAD_REQUEST.value())
+                    .message("Post content is inappropriate and violates our content policy.")
                     .build();
         }
 
-        Post post = Post.builder()
-                .content(request.getContent())
-                .userId(authentication.getName())
-                .fileUrls(fileUrls) // Use this to display on FE
-                .visibility(visibility)
-                .createdDate(Instant.now())
-                .modifiedDate(Instant.now())
-                .like(0)
-                .unlike(0)
-                .comments(List.of())
-                .build();
+        try {
+            List<String> fileUrls = (files != null && files.stream().anyMatch(file -> !file.isEmpty()))
+                    ? s3Service.uploadFiles(files.stream().filter(file -> !file.isEmpty()).collect(Collectors.toList()))
+                    : List.of();
 
-        post = postRepository.save(post);
-
-        // lưu vào Elasticsearch
-
-        if (post.getId() != null) {
-            PostDocument postDocument = PostDocument.builder()
-                    .id(post.getId())
-                    .content(post.getContent())
-                    .userId(post.getUserId())
-                    .fileUrls(post.getFileUrls())
-                    .visibility(post.getVisibility())
-                    .createdAt(post.getCreatedDate())
-                    .updatedAt(post.getModifiedDate())
-                    .comments(new ArrayList<>())
+            Post post = Post.builder()
+                    .content(request.getContent())
+                    .userId(authentication.getName())
+                    .fileUrls(fileUrls)
+                    .visibility(request.getVisibility())
+                    .createdDate(Instant.now())
+                    .modifiedDate(Instant.now())
+                    .like(0)
+                    .unlike(0)
+                    .comments(List.of())
                     .build();
-            postSearchRepository.save(postDocument);
+
+            String languageCode = keywordService.detectDominantLanguage(request.getContent());
+            post.setLanguage(languageCode);
+
+
+            List<Keyword> extractedKeywords = keywordService.extractAndSaveKeywords(request.getContent());
+            List<String> keywordIds = extractedKeywords.stream().map(Keyword::getId).collect(Collectors.toList());
+            post.setKeywords(keywordIds);
+
+            sentimentAnalysisService.analyzeAndSaveSentiment(post);
+
+
+            post = postRepository.save(post);
+            PostResponse postResponse = postMapper.toPostResponse(post);
+            postResponse.setKeywords(extractedKeywords.stream().map(Keyword::getPhrase).collect(Collectors.toList()));
+
+
+            return ApiResponse.<PostResponse>builder()
+                    .code(200)
+                    .message("Post created successfully")
+                    .result(postResponse)
+                    .build();
+        } catch (SdkClientException e) {
+            log.error("AWS S3 Exception: ", e);
+
+            return ApiResponse.<PostResponse>builder()
+                    .code(HttpStatus.BAD_REQUEST.value())
+                    .message("Failed to upload files due to AWS configuration issues.")
+                    .build();
         }
-        return ApiResponse.<PostResponse>builder()
-                .code(200)
-                .message("Post created successfully")
-                .result(postMapper.toPostResponse(post))
-                .build();
     }
-
+//    public ApiResponse<PostResponse> createPostWithFiles(PostRequest request, List<MultipartFile> files) {
+//        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+//
+//        // Check if the content is appropriate
+//        if (!contentModerationService.isContentAppropriate(request.getContent())) {
+//            return ApiResponse.<PostResponse>builder()
+//                    .code(HttpStatus.BAD_REQUEST.value())
+//                    .message("Post content is inappropriate and violates our content policy.")
+//                    .build();
+//        }
+//
+//        try {
+//            List<String> fileUrls = (files != null && files.stream().anyMatch(file -> !file.isEmpty()))
+//                    ? s3Service.uploadFiles(files.stream().filter(file -> !file.isEmpty()).collect(Collectors.toList()))
+//                    : List.of();
+//
+//            // Check if the images are safe
+//            for (String fileUrl : fileUrls) {
+//                String fileName = extractFileNameFromUrl(decodeUrl(fileUrl));
+//                S3Object s3Object = s3Service.getObject(fileName);
+//                if (!rekognitionService.isImageSafe(s3Object)) {
+//                    s3Service.deleteFile(fileName);
+//                    return ApiResponse.<PostResponse>builder()
+//                            .code(HttpStatus.BAD_REQUEST.value())
+//                            .message("Uploaded image contains unsafe content.")
+//                            .build();
+//                }
+//            }
+//
+//            Post post = Post.builder()
+//                    .content(request.getContent())
+//                    .userId(authentication.getName())
+//                    .fileUrls(fileUrls)
+//                    .visibility(request.getVisibility())
+//                    .createdDate(Instant.now())
+//                    .modifiedDate(Instant.now())
+//                    .like(0)
+//                    .unlike(0)
+//                    .comments(List.of())
+//                    .build();
+//
+//            String languageCode = keywordService.detectDominantLanguage(request.getContent());
+//            post.setLanguage(languageCode);
+//
+//            List<Keyword> extractedKeywords = keywordService.extractAndSaveKeywords(request.getContent());
+//            List<String> keywordIds = extractedKeywords.stream().map(Keyword::getId).collect(Collectors.toList());
+//            post.setKeywords(keywordIds);
+//
+//            sentimentAnalysisService.analyzeAndSaveSentiment(post);
+//
+//            post = postRepository.save(post);
+//            PostResponse postResponse = postMapper.toPostResponse(post);
+//            postResponse.setKeywords(extractedKeywords.stream().map(Keyword::getPhrase).collect(Collectors.toList()));
+//
+//            return ApiResponse.<PostResponse>builder()
+//                    .code(200)
+//                    .message("Post created successfully")
+//                    .result(postResponse)
+//                    .build();
+//        } catch (SdkClientException e) {
+//            log.error("AWS S3 Exception: ", e);
+//
+//            return ApiResponse.<PostResponse>builder()
+//                    .code(HttpStatus.BAD_REQUEST.value())
+//                    .message("Failed to upload files due to AWS configuration issues.")
+//                    .build();
+//        }
+//    }
 
     public ApiResponse<Void> deletePost(String postId) {
-        // Lấy bài viết từ cơ sở dữ liệu
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new RuntimeException("Post not found"));
 
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String currentUserId = authentication.getName();
 
-        // kt quyền xóa bài viết
         if (!post.getUserId().equals(currentUserId)) {
             throw new RuntimeException("Not authorized to delete this post");
         }
@@ -223,17 +207,70 @@ public class PostService {
                 }
             }
         }
-        //Đánh dấu đã xóa
-        post.setDeleted(true);
-        post.setModifiedDate(Instant.now()); // Cập nhật thời gian sửa
-        postRepository.save(post);
 
-        // Xóa bài viết khỏi Elasticsearch
-        postSearchRepository.deleteById(postId);
+        PostHistory postHistory = PostHistory.builder()
+                .id(post.getId())
+                .content(post.getContent())
+                .fileUrls(post.getFileUrls())
+                .visibility(post.getVisibility())
+                .userId(post.getUserId())
+                .createdDate(post.getCreatedDate())
+                .modifiedDate(post.getModifiedDate())
+                .like(post.getLike())
+                .unlike(post.getUnlike())
+                .commentCount(post.getCommentCount())
+                .comments(post.getComments())
+                .sharedPost(postMapper.toPostResponse(post.getSharedPost()))
+                .build();
+
+        postHistoryRepository.save(postHistory);
+
+        postRepository.delete(post);
 
         return ApiResponse.<Void>builder()
                 .code(HttpStatus.OK.value())
-                .message("Post marked as deleted successfully")
+                .message("Post deleted and moved to history successfully")
+                .build();
+    }
+
+    @PreAuthorize("hasRole('ADMIN')")
+    public ApiResponse<PageResponse<PostResponse>> getHistoryPosts(int page, int size) {
+        Pageable pageable = PageRequest.of(page - 1, size, Sort.by(Sort.Order.desc("createdDate")));
+        var pageData = postHistoryRepository.findAll(pageable);
+
+        List<PostHistory> posts = pageData.getContent();
+
+        return ApiResponse.<PageResponse<PostResponse>>builder()
+                .code(HttpStatus.OK.value())
+                .message("Deleted posts retrieved successfully")
+                .result(PageResponse.<PostResponse>builder()
+                        .currentPage(page)
+                        .pageSize(pageData.getSize())
+                        .totalPage(pageData.getTotalPages())
+                        .totalElement(pageData.getTotalElements())
+                        .data(posts.stream().map(postMapper::toPostResponse).collect(Collectors.toList()))
+                        .build())
+                .build();
+    }
+
+    public ApiResponse<PageResponse<PostResponse>> getPostsByLanguage(int page, int size, String language) {
+        Sort sort = Sort.by(Sort.Order.desc("createdDate"));
+        Pageable pageable = PageRequest.of(page - 1, size, sort);
+
+        var pageData = postRepository.findAllByLanguage(language, pageable);
+
+        List<Post> posts = pageData.getContent();
+
+        return ApiResponse.<PageResponse<PostResponse>>builder()
+                .code(HttpStatus.OK.value())
+                .message("Posts retrieved successfully")
+                .result(PageResponse.<PostResponse>builder()
+                        .currentPage(page)
+                        .pageSize(pageData.getSize())
+                        .totalPage(pageData.getTotalPages())
+                        .totalElement(pageData.getTotalElements())
+                        .data(posts.stream().map(postMapper::toPostResponse).collect(Collectors.toList()))
+                        .build())
                 .build();
     }
 
@@ -252,7 +289,7 @@ public class PostService {
                         (post.getVisibility() == PostVisibility.FRIENDS && isFriend(userID, post.getUserId())) ||
                         post.getVisibility() == PostVisibility.PRIVATE)
                 .filter(post -> includeDeleted || !post.isDeleted()) // Lọc bài viết đã xóa
-                .toList();
+                .collect(Collectors.toList());
 
         return ApiResponse.<PageResponse<PostResponse>>builder()
                 .code(200)
@@ -267,34 +304,6 @@ public class PostService {
                 .build();
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
-    public ApiResponse<PageResponse<PostResponse>> getMyPostsHistory(int page, int size) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String userID = authentication.getName();
-
-        Sort sort = Sort.by(Sort.Order.desc("createdDate"));
-        Pageable pageable = PageRequest.of(page - 1, size, sort);
-
-        var pageData = postRepository.findAllByUserId(userID, pageable);
-
-        List<Post> filteredPosts = pageData.getContent().stream()
-                .filter(post -> post.getVisibility() == PostVisibility.PUBLIC ||
-                        (post.getVisibility() == PostVisibility.FRIENDS && isFriend(userID, post.getUserId())) ||
-                        post.getVisibility() == PostVisibility.PRIVATE)
-                .toList();
-
-        return ApiResponse.<PageResponse<PostResponse>>builder()
-                .code(200)
-                .message("My posts history retrieved successfully")
-                .result(PageResponse.<PostResponse>builder()
-                        .currentPage(page)
-                        .pageSize(pageData.getSize())
-                        .totalPage(pageData.getTotalPages())
-                        .totalElement(pageData.getTotalElements())
-                        .data(filteredPosts.stream().map(postMapper::toPostResponse).collect(Collectors.toList()))
-                        .build())
-                .build();
-    }
 
     public ApiResponse<PostResponse> sharePost(String postId, String content, PostVisibility visibility) {
         // Tìm bài gốc theo postId
@@ -333,17 +342,24 @@ public class PostService {
                 .originalPost(originalPost)
                 .build();
 
+        // Extract and save keywords for the shared post
+        List<Keyword> extractedKeywords = keywordService.extractAndSaveKeywords(content);
+        List<String> keywordIds = extractedKeywords.stream().map(Keyword::getId).collect(Collectors.toList());
+        sharedPost.setKeywords(keywordIds);
+
         // Lưu bài viết chia sẻ mới vào SharedPostRepository
         sharedPost = sharedPostRepository.save(sharedPost);
 
         // Sử dụng ShareMapper để ánh xạ SharedPost sang PostResponse
+        PostResponse postResponse = shareMapper.toPostResponse(sharedPost);
+        postResponse.setKeywords(extractedKeywords.stream().map(Keyword::getPhrase).collect(Collectors.toList()));
+
         return ApiResponse.<PostResponse>builder()
                 .code(200)
                 .message("Post shared successfully")
-                .result(shareMapper.toPostResponse(sharedPost))
+                .result(postResponse)
                 .build();
     }
-
 
 
     boolean isFriend(String currentUserId, String postUserId) {
@@ -361,4 +377,34 @@ public class PostService {
         return URLDecoder.decode(encodedUrl, StandardCharsets.UTF_8);
     }
 
+    public ApiResponse<byte[]> downloadImageFromPost(String postId, String imageFileName) {
+        // Lấy bài viết từ cơ sở dữ liệu
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new RuntimeException("Post not found"));
+
+        // Kiểm tra xem bài viết có chứa URL của hình ảnh hay không
+        List<String> fileUrls = post.getFileUrls();
+        if (fileUrls == null || fileUrls.isEmpty()) {
+            throw new RuntimeException("No images found in this post");
+        }
+
+        // Tìm URL khớp với tên file hình ảnh
+        String matchedUrl = fileUrls.stream()
+                .filter(url -> extractFileNameFromUrl(decodeUrl(url)).equals(imageFileName))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("Image not found in this post"));
+
+        // Tải dữ liệu hình ảnh từ Amazon S3
+        byte[] imageData = s3Service.downloadFile(imageFileName);
+
+        return ApiResponse.<byte[]>builder()
+                .code(HttpStatus.OK.value())
+                .message("Image downloaded successfully")
+                .result(imageData)
+                .build();
+    }
+
+    public ApiResponse<PostResponse> translatePostContent(String postId, String targetLanguage) {
+        return translationService.translatePostContent(postId, targetLanguage);
+    }
 }
